Update to spring 6, add jakarta jms-api. Refactor test so that it doesn't use activemq, which is good for decoupling and also means we don't have to upgrade activemq at the same time in order for the project to compile. But jms stuff probably won't work in deployed apps until we do.